...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/survey_summary_item_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
                        android:layout_marginBottom="8dp"
                        android:text="@string/today_title"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        android:textColor="?android:attr/textColorPrimary" />

                    <TextView
                        android:id="@+id/survey_list_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_description"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </LinearLayout>
...
